--- a/TRPO_pr12/Pages/MainPage.xaml
+++ b/TRPO_pr12/Pages/MainPage.xaml
@@ -9,12 +9,6 @@
       DataContext="{Binding RelativeSource={RelativeSource Self}}"
       Title="MainPage">
 
-    <Page.Resources>
-        <Style TargetType="Button">
-            <Setter Property="Margin" Value="5"/>
-            <Setter Property="Padding" Value="5"/>
-        </Style>
-    </Page.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="40"/>
@@ -32,10 +26,11 @@
                 <DataTemplate>
                     <StackPanel>
                         <StackPanel>
-                            <TextBlock Text="{Binding LastName}"/>
-                            <TextBlock Text="{Binding FirstName}"/>
-                            <TextBlock Text="{Binding MiddleName}"/>
-                            <TextBlock Text="{Binding Birthday, StringFormat={}{0:dd.MM.yyyy}}"/>
+                            <TextBlock Text="{Binding Login}"/>
+                            <TextBlock Text="{Binding Name}"/>
+                            <TextBlock Text="{Binding Email}"/>
+                            <TextBlock Text="{Binding Password}"/>
+                            <TextBlock Text="{Binding CreatedAt, StringFormat={}{0:dd.MM.yyyy}}"/>
                         </StackPanel>
                     </StackPanel>
                 </DataTemplate>
