--- a/TRPO_pr12/Style/UI/Generic.xaml
+++ b/TRPO_pr12/Style/UI/Generic.xaml
@@ -1,9 +1,10 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Style TargetType="Button" BasedOn="{StaticResource MaterialDesignRaisedButton}">
+    <Style TargetType="Button">
         <Setter Property="Background" Value="{DynamicResource ButtonStandardNormalBrush}"/>
         <Setter Property="Padding" Value="0 2"/>
         <Setter Property="Margin" Value="5 2 4 1"/>
+        <Setter Property="Padding" Value="7"/>
 
 
         <Setter Property="Template">
@@ -21,10 +22,10 @@
         </Setter>
         <Style.Triggers>
             <Trigger Property="IsMouseOver" Value="True">
-                <Setter Property="Background" Value="{DynamicResource ButtonHover}"/>
+                <Setter Property="Background" Value="{DynamicResource ButtonStandardHoverBrush}"/>
             </Trigger>
             <Trigger Property="IsPressed" Value="True">
-                <Setter Property="Background" Value="{DynamicResource ButtonPressed}"/>
+                <Setter Property="Background" Value="{DynamicResource ButtonStandardPressedBrush}"/>
             </Trigger>
         </Style.Triggers>
     </Style>
@@ -33,9 +34,16 @@
         <Setter Property="Background" Value="{DynamicResource WindowBackgroundBrush}"/>
     </Style>
 
+    <Style TargetType="ListView">
+        <Setter Property="Background" Value="{DynamicResource WindowBackgroundBrush}"/>
+    </Style>
     
     <Style TargetType="TextBlock">
         <Setter Property="Foreground" Value="White"/>
+    </Style>
+
+    <Style x:Key="message" TargetType="TextBlock">
+        <Setter Property="Foreground" Value="Red"/>
     </Style>
 
 
